kube/home/auth/vaultwarden/route.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: vaultwarden
  annotations:
    external-dns.alpha.kubernetes.io/hostname: vault.cianfr.one
spec:
  parentRefs:
    - name: external-gw
      namespace: networking
      sectionName: https
  hostnames:
    - vault.cianfr.one
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: vaultwarden
          port: 80
